<resources>
    <string name="app_name">Neighbourly</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_Postjob">Post a Job</string>
    <string name="menu_Searchjob">Search a job</string>
    <string name="menu_Account">Account</string>
    <string name="menu_Contact">Contact Us</string>
    <string name="menu_Feedback">Feedback</string>
    <string name="menu_Home">Home</string>
    <string name="menu_Settings">Settings</string>
    <string name="job_title">Job Title</string>
    <string name="add_job">Add Job</string>
    <string name="display_slogan">Welcome</string>
    <string name="menu_homepage">Home</string>
    <string name="paint_fence">Paint Fence</string>


    <string name="selected_item">Selected item:</string>

    <string-array name="job_type">
        <item>Shopping</item>
        <item>IT</item>
        <item>Cooking</item>
        <item>Delivery</item>
        <item>Building</item>
        <item>Paperwork</item>
        <item>Driving</item>
        <item>Other</item>

    </string-array>
</resources>